# Speech-Competition-Management-System

./: CMakeLists.txt  README.md  main.cpp
include/: speaker.h  speechManager.h
src/: speaker.cpp  speechManager.cpp
